--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 	<style>
     	* { padding: 0; margin: 0; }
     	canvas { background: #eee; display: block; margin: 0 auto; }
+	
     </style>
 	</head>
 	<body>
 	<canvas id="myCanvas" width="480" height="320"></canvas>
-	<body onload="init()">
-
-
+	<body onload="init(), moveleft()">
 	</body>
 
 
